# dualis-timetable-dav-sync-docker

./: .gitignore  Dockerfile  README.md  docker-compose.yml.example  entrypoint.sh
.github/workflows/: build.yml
api/: .env.example  Cargo.toml
api/src/: config.rs  dualis.rs  error.rs  ical.rs  main.rs  middleware.rs  routes.rs
sync/: sync-schedule.py
